--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,2 +1,16 @@
+cycler==0.10.0
+decorator==4.4.1
+imageio==2.6.1
+joblib==0.14.0
+kiwisolver==1.1.0
+matplotlib==3.1.1
+networkx==2.4
+numpy==1.17.4
+Pillow==6.2.1
+pyparsing==2.4.5
+python-dateutil==2.8.1
+PyWavelets==1.1.1
+scikit-image==0.16.2
 scikit-learn==0.21.3
-pillow
+scipy==1.3.2
+six==1.13.0
