--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,python,windows,jetbrains+all,visualstudiocode
+
+**/*.pkl
+**/dump/*
